--- a/.github/workflows/RunAndCompress.yml
+++ b/.github/workflows/RunAndCompress.yml
@@ -10,10 +10,12 @@ on:
 
 jobs:
   run-compress:
+    name: Run and Compress
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v4
+    - name: Checkout
+      uses: actions/checkout@v4
 
     # Configure Gradle for optimal use in GitHub Actions, including caching of downloaded dependencies.
     # See: https://github.com/gradle/actions/blob/main/setup-gradle/README.md
@@ -24,10 +26,12 @@ jobs:
       run: gradle run
 
     - name: Give Brotli version
-      run: |
-        brotli -V
+      run: brotli -V
 
-    - name: TBC...
-      run: |
-        echo "TBC"
+    - name: Generate Output
+      run: perl script/generateOutput.pl
 
+    - name: Commit the changes, if any
+      uses: stefanzweifel/git-auto-commit-action@v5
+      with:
+        commit_message: Auto-generated (update output with latest stdlib)
